v3.6.9 (XXXX-XX-XX)
-------------------

* Fixed potential deadlock in cluster transactions if a transaction is
  returned that was soft-aborted by transaction garbage collection before.

* Bug-fix: Allow to unlink a view created on a SmartGraphEdge collection.

* Fixed an ownership issue which could lead to undefined behavior in case an AQL
  query could not be inserted into the query registry of a coordinator or DB
  server successfully (due to an out-of-memory situation or a race during server
  shutdown).

* Instead of failing to connect to INADDR_ANY refuse it as a parameter, with a
  descriptive error message for novice users (issue #12871).

* Add parameter so `db.collection.truncate({compact: false})` will stop
  compaction from happening. Compaction may have performance impacts even if the
  truncate was invoked on nearly empty collections.
  This option has effect only for deployments with RocksDB storage engine.

* Fixed issue #12248: Web UI - Added missing HTML escaping in the setup script
  section of a foxx app.

* Fixed collection count which could be off after a server crash.


v3.6.8 (2020-10-14)
-------------------
      
* Added the following metrics for synchronous replication in the cluster:

  - `arangodb_refused_followers_count`: Number of times a shard leader received
    a refusal answer from a follower during synchronous replication.
  - `arangodb_sync_wrong_checksum`: Number of times a mismatching shard 
    checksum was detected when syncing shards. In case this happens, a resync
    will be triggered for the shard.
  - `arangodb_dropped_followers_count`: Number of times a follower was dropped
    during synchronous replication.

* Fixed handling of failedLeaderJob. In case of a plan modification, that
  removes a server from the plan, e.g. reduce replication factor. Directly
  followed by a failure of the current shard leader, would reinsert the just
  removed server in the plan, which is undesired, we first need to have a full